--- a/vunban/package.json
+++ b/vunban/package.json
@@ -11,9 +11,10 @@
     "alertifyjs": "^1.11.2",
     "firebase": "^5.8.3",
     "vue": "^2.6.6",
-    "vue-draggable": "^2.0.0-beta.1",
+    "vue-kanban": "^1.4.0",
     "vue-material": "^1.0.0-beta-10.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuedraggable": "^2.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
